--- a/Mango.Web/Views/Cart/CartIndex.cshtml
+++ b/Mango.Web/Views/Cart/CartIndex.cshtml
@@ -92,7 +92,7 @@
                 <div class="col-6 col-md-3 offset-md-6">
                 </div>
                 <div class="col-6 col-md-3">
-                    <a asp-action="Checkout" class="btn btn-success form-control ">
+                        <a href="~/Cart/Checkout" class="btn btn-success form-control ">
                         <span>Checkout</span>
                     </a>
                 </div>
